@@ -113,7 +113,9 @@ class AtomController < ApplicationController
   def image_post
     if request.method == :post
       begin
-        @image = Image.new
+#        @image = Image.new
+        @image = Picture.new
+
         atom_parse_image(@image, request.raw_post)
         @image.save
         render :status => 201
